# CodeWright

./: .gitignore  DEVELOP_PLAN.md  README.md  test_file.py
.augment/rules/: python环境.md  vuejs页面检查工具.md  代理工具.md
.docs/: DEVELOP_DETAIL.md
.test/: integration_test.py
.test/.test/: downloaded_export.html
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py
backend/app/models/: __init__.py  announcement.py  export_history.py  export_job.py  file.py  highlight_mapping.py  manual_section.py  project.py  project_settings.py  setting.py  template.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  export_history.py  exports.py  files.py  manual.py  projects.py  settings.py  users.py
backend/app/schemas/: __init__.py  common.py  file.py  project.py  user.py
backend/app/services/: admin_service.py  auth_service.py  export_history_service.py  export_service.py  file_service.py  highlight_service.py  init_service.py  manual_service.py  pdf_service.py  project_service.py  project_settings_service.py  template_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: CodePreview.vue  ExportHistory.vue  FileRenameDialog.vue  FileUpload.vue  HtmlPreview.vue  LanguageSelector.vue  ProjectSettings.vue  SectionEditor.vue  SectionList.vue  SortableFileList.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
templates/: .gitkeep  basic_template_488a7600.html
(+12 files in other folders)
